--- a/flask_app/Dockerfile
+++ b/flask_app/Dockerfile
@@ -1,10 +1,18 @@
-FROM python:3.9-slim
+# Use the official Python image from Docker Hub
+FROM python:3.8-slim
 
+# Set the working directory
 WORKDIR /app
 
-COPY requirements.txt requirements.txt
-RUN pip install -r requirements.txt
+# Copy the requirements file and install dependencies
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy the rest of the application code
 COPY . .
 
+# Expose the application port
+EXPOSE 5000
+
+# Run the Flask application
 CMD ["python", "app.py"]
