--- a/flask_app/requirements.txt
+++ b/flask_app/requirements.txt
@@ -1,4 +1,5 @@
-Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
-redis==4.0.2
+Flask==2.0.3
+Werkzeug==2.0.3
 psycopg2-binary==2.9.1
+redis==4.0.2
+Flask-SQLAlchemy==2.5.1
