--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,25 @@
-version: '3.8'
-
+version: '3'
 services:
-  web:
-    build: ./flask_app
-    ports:
-      - "5000:5000"
+  postgres:
+    image: postgres:latest
     environment:
-      - REDIS_URL=redis://redis:6379
-      - DATABASE_URL=postgres://postgres:password@db:5432/mydatabase
-    depends_on:
-      - redis
-      - db
-
-  redis:
-    image: "redis:alpine"
-    ports:
-      - "6379:6379"
-
-  db:
-    image: "postgres"
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: mypassword
       POSTGRES_DB: mydatabase
     ports:
       - "5432:5432"
+  
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+
+  flask-app:
+    build: ./flask-app
+    environment:
+      DATABASE_URL: ${DATABASE_URL}
+    ports:
+      - "5000:5000"
+    depends_on:
+      - postgres
+      - redis
