--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - "6379:6379"
 
   flask-app:
-    build: ./flask-app
+    build: ./flask_app
     environment:
       DATABASE_URL: ${DATABASE_URL}
     ports:
