--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,29 @@
-version: '3'
+version: "3.8"
+
 services:
-  postgres:
-    image: postgres:latest
-    environment:
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-      POSTGRES_DB: mydatabase
+  web:
+    build: ./flask_app
     ports:
-      - "5432:5432"
-  
+      - "5000:5000"
+    environment:
+      - REDIS_URL=redis://redis:6379
+      - POSTGRES_DB=app_db
+      - POSTGRES_USER=app_user
+      - POSTGRES_PASSWORD=app_password
+    depends_on:
+      - redis
+      - db
+
   redis:
-    image: redis:latest
+    image: "redis:alpine"
     ports:
       - "6379:6379"
 
-  flask-app:
-    build: ./flask_app
+  db:
+    image: "postgres:13-alpine"
     environment:
-      DATABASE_URL: ${DATABASE_URL}
+      POSTGRES_DB: app_db
+      POSTGRES_USER: app_user
+      POSTGRES_PASSWORD: app_password
     ports:
-      - "5000:5000"
-    depends_on:
-      - postgres
-      - redis
+      - "5432:5432"
