--- a/flask_app/Dockerfile
+++ b/flask_app/Dockerfile
@@ -1,18 +1,10 @@
-# Use the official Python image from Docker Hub
-FROM python:3.8-slim
+FROM python:3.9-slim
 
-# Set the working directory
 WORKDIR /app
 
-# Copy the requirements file and install dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements.txt requirements.txt
+RUN apt-get update && apt-get install -y libpq-dev gcc && pip install -r requirements.txt
 
-# Copy the rest of the application code
 COPY . .
 
-# Expose the application port
-EXPOSE 5000
-
-# Run the Flask application
 CMD ["python", "app.py"]
